# Paraphrase

./: CMakeLists.txt
src/: CMakeLists.txt  para.cpp
src/dict/: CMakeLists.txt  dictParallel.cpp  dictStack.cpp
src/dict/ext/: CMakeLists.txt
src/inc/: stack.h
src/lang/: CMakeLists.txt  para.cpp
